<resources>
    <string name="app_name">Lesson3_task1</string>
    <string name="contacts">Contacts</string>
    <string name="todo">todo</string>
    <string name="search_for">Search for messages and users</string>
    <string name="contact">Contact</string>
    <string name="chats">Chats</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_people_nearby">Find People Nearby</string>
    <string name="invite_friends">Invite Friends</string>
</resources>