<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:contentDescription="@string/todo"
            android:id="@+id/btn_location_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black_2"
            android:src="@drawable/ic_location" />

        <TextView
            android:id="@+id/text_loc_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/find_people_nearby"
            android:textColor="@color/blue_dark"
            android:textSize="19sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#494949" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:contentDescription="@string/todo"
            android:id="@+id/btn_invite_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black_2"
            android:src="@drawable/ic_baseline_person_add_24" />

        <TextView
            android:id="@+id/text_invite_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/invite_friends"
            android:textColor="@color/blue_dark"
            android:textSize="19sp" />

    </LinearLayout>

</LinearLayout>